ui/base/ime/input_method_win_tsf.cc
@@ -80,6 +80,7 @@ bool InputMethodWinTSF::OnUntranslatedIMEMessage(
 }
 
 void InputMethodWinTSF::OnTextInputTypeChanged(const TextInputClient* client) {
+  InputMethodBase::OnTextInputTypeChanged(client);
   if (!IsTextInputClientFocused(client) || !IsWindowFocused(client))
     return;
   ui::TSFBridge::GetInstance()->CancelComposition();
